final computer prototype

--- a/subpage1.html
+++ b/subpage1.html
@@ -18,7 +18,7 @@
 
   <body>
 
-      <header>
+          <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#" onclick="location='index.html'">MentalEZ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Who We Are</a>
-              <a class="dropdown-item" href="#">What We Do</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_6.html'">Who We Are</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_7.html'">What We Do</a>
             </div>
             </li>
             <li class="nav-item dropdown">
@@ -41,12 +41,12 @@
             </li>
             
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Frequent Problems</a>
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">High Frequency Problems</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Anxiety</a>
-              <a class="dropdown-item" href="#">Bipohar</a>
-              <a class="dropdown-item" href="#" onclick="location='subpage3.html'">Depression</a>
-              <a class="dropdown-item" href="#">Psychisis</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_1.html'">Anxiety</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_2.html'">Bipohar</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_3.html'">Depression</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_4.html'">Psychisis</a>
               <a class="dropdown-item" href="#">Back To School</a>
               <a class="dropdown-item" href="#">Life On Campus</a>
               <a class="dropdown-item" href="#">All Other Type(A TO Z)</a>
@@ -56,12 +56,12 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do More</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Donate</a>
-              <a class="dropdown-item" href="#">Volunteer</a>
-              <a class="dropdown-item" href="#">Share Your Story</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage5.html'">Volunteer</a>
+              <a class="dropdown-item" href="#"onclick="location='shareyourstory.html'">Share Your Story</a>
             </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-aided</a>
+              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-Aid</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="location='subpage1.html'">Find Support</a>
@@ -87,6 +87,7 @@
           <div class="jumbotron">
             <h1>Find Support</h1>
             <p>If you or someone you know is struggling, you are not alone. There are many supports, services and treatment options that may help. A change in behavior or mood may be the early warning signs of a mental health condition and should never be ignored. There are many different types of mental illness, and it isn’t easy to simplify the range of challenges people face.</p>
+            <img src="gif3.gif">
           </div>
           <div class="row">
             <div class="col-6 col-lg-6">
@@ -98,6 +99,11 @@
               <h2>Live Online Chat</h2>
               <p>Available to talk 24 hours a day, 7 days a week. 
               If you or someone you know is suicidal or in emotional distress, contact the National Suicide Prevention Lifeline Site exit disclaimer. Trained crisis workers are available to talk 24 hours a day, 7 days a week. </p>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
               <p><a class="btn btn-secondary" href="#" role="button">Start here &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
@@ -117,16 +123,12 @@
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="#" class="list-group-item active" onclick="location='https://www.mentalhealth.gov/'"><b>Mentalhealth</b></a>
+            <a href="#" class="list-group-item active"><b>Help from other websites</b></a>
             <a href="#" class="list-group-item" onclick="location='https://www.nami.org/'"><b>National Mental</b></a>
             <a href="#" class="list-group-item" onclick="location='https://medlineplus.gov/mentalhealth.html'"><b>Medlineplus</b></a>
             <a href="#" class="list-group-item" onclick="location='http://www.mentalhealthamerica.net/search/node'"><b>MentalAmerica</b></a>
             <a href="#" class="list-group-item" onclick="location='https://www.webmd.com/mental-health/default.htm'"><b>Webmd</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.mayoclinic.org/diseases-conditions/depression/symptoms-causes/syc-20356007'"><b>Depression</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://adaa.org/understanding-anxiety/depression'"><b>Anxiety</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.healthtalk.org/peoples-experiences/mental-health/mental-health-ethnic-minority-carers-experiences/overview'"><b>Mental-minority</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.hhs.gov/'"><b>HHS</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.mentalsupportcommunity.net/'"><b>mentalsupportcommunity</b></a>
+            
           </div>
         </div><!--/span-->
       </div><!--/row-->
