--- a/subpage2.html
+++ b/subpage2.html
@@ -18,7 +18,7 @@
 
   <body>
 
-    <header>
+        <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#" onclick="location='index.html'">MentalEZ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Who We Are</a>
-              <a class="dropdown-item" href="#">What We Do</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_6.html'">Who We Are</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_7.html'">What We Do</a>
             </div>
             </li>
             <li class="nav-item dropdown">
@@ -41,12 +41,12 @@
             </li>
             
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Frequent Problems</a>
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">High Frequency Problems</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Anxiety</a>
-              <a class="dropdown-item" href="#">Bipohar</a>
-              <a class="dropdown-item" href="#" onclick="location='subpage3.html'">Depression</a>
-              <a class="dropdown-item" href="#">Psychisis</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_1.html'">Anxiety</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_2.html'">Bipohar</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_3.html'">Depression</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage3_4.html'">Psychisis</a>
               <a class="dropdown-item" href="#">Back To School</a>
               <a class="dropdown-item" href="#">Life On Campus</a>
               <a class="dropdown-item" href="#">All Other Type(A TO Z)</a>
@@ -56,12 +56,12 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do More</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Donate</a>
-              <a class="dropdown-item" href="#">Volunteer</a>
-              <a class="dropdown-item" href="#">Share Your Story</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage5.html'">Volunteer</a>
+              <a class="dropdown-item" href="#"onclick="location='shareyourstory.html'">Share Your Story</a>
             </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-aided</a>
+              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-Aid</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="location='subpage1.html'">Find Support</a>
@@ -87,11 +87,12 @@
           <div class="jumbotron">
             <h1>Self-Aided</h1>
             <p> Today, 40% of young adults age 18-24 are enrolled in a two or four year education institution.  Statistics show that 75% of mental illnesses develop before age 25, making colleges ideal locations for early identification.  However, the number one reason students say they do not use mental health resources is lack of knowledge that those resources even exist.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VUKPrSMmbzc" frameborder="0" allowfullscreen ></iframe>
           </div>
           <div class="row">
             <div class="col-6 col-lg-6">
-              <h2>Why Choose Self Aid?</h2>
-              <p>Mental Health Self Aid helps people know that mental illnesses and addictions are real, common and treatable and that it's OK to seek help.  Research demonstrates this program's effectiveness in improving knowledge of mental illnesses and substance use, removing fear and misunderstanding and enabling those trained to offer concrete assistance.</p>
+              <h2>Why Choose Self Aid?<br><br></h2>
+              <p>Mental Health Self Aid helps people know that mental illnesses and addictions are real, common and treatable and that it's OK to seek help.  Research demonstrates this program's effectiveness in improving knowledge of mental illnesses and substance use, removing fear and misunderstanding and enabling those trained to offer concrete assistance.<br><br><br></p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
@@ -108,7 +109,7 @@
             </div><!--/span-->
             <div class="col-6 col-lg-6">
               <h2>The Third Method Of Self-Aid</h2>
-              <p>Transfer Method. When people are in psychological distress, the first and easiest thing to do is to pay attention to the transfer method. Avoid external stimuli that lead to mental distress. In psychological predicament, people's brains tend to form a strong excitement center, pay attention to transfer the relevant external stimulation, can excite the focal gave way to some other new excitement caused by center. The center of excitement has moved away from the psychological dilemma.
+              <p>Transfer Method. When people are in psychological distress, the first and easiest thing to do is to pay attention to the transfer method. Avoid external stimuli that lead to mental distress. In psychological predicament, people's brains tend to form a strong excitement center, pay attention to transfer the relevant external stimulation, can excite the focal gave way to some other new excitement caused by center. The center of excitement has moved away from the psychological dilemma.<br><br><br><br>
               </p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!--/span-->
@@ -118,16 +119,12 @@
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="#" class="list-group-item active" onclick="location='https://www.mentalhealth.gov/'"><b>Mentalhealth</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.nami.org/'"><b>National Mental</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://medlineplus.gov/mentalhealth.html'"><b>Medlineplus</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.mentalhealthamerica.net/search/node'"><b>MentalAmerica</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.webmd.com/mental-health/default.htm'"><b>Webmd</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.mayoclinic.org/diseases-conditions/depression/symptoms-causes/syc-20356007'"><b>Depression</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://adaa.org/understanding-anxiety/depression'"><b>Anxiety</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.healthtalk.org/peoples-experiences/mental-health/mental-health-ethnic-minority-carers-experiences/overview'"><b>Mental-minority</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.hhs.gov/'"><b>HHS</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.mentalsupportcommunity.net/'"><b>mentalsupportcommunity</b></a>
+            <a href="#" class="list-group-item active"><b>Self help from other webs</b></a>
+            <a href="#" class="list-group-item" onclick="location='http://www.mentalhealthamerica.net/self-help-tools'"><b>Self help tools</b></a>
+            <a href="#" class="list-group-item" onclick="location='http://www.mentalhealthamerica.net/taking-good-care-yourself'"><b>Taking good care of you</b></a>
+            <a href="#" class="list-group-item" onclick="location='https://www.mentalhelp.net/articles/psychological-self-tools-online-self-help-book/'"><b>Online self help</b></a>
+            <a href="#" class="list-group-item" onclick="location='http://www.overcoming.co.uk/single.htm?ipg=4795'"><b>Self help from Overcoming.com</b></a>
+          
           </div>
         </div><!--/span-->
       </div><!--/row-->
