--- a/subpage3_3_2.html
+++ b/subpage3_3_2.html
@@ -18,7 +18,7 @@
 
   <body>
 
-    <header>
+        <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#" onclick="location='index.html'">MentalEZ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Who We Are</a>
-              <a class="dropdown-item" href="#">What We Do</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_6.html'">Who We Are</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_7.html'">What We Do</a>
             </div>
             </li>
             <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
             </li>
             
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Frequent Problems</a>
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">High Frequency Problems</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#" onclick="location='subpage3_1.html'">Anxiety</a>
               <a class="dropdown-item" href="#" onclick="location='subpage3_2.html'">Bipohar</a>
@@ -56,12 +56,12 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do More</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Donate</a>
-              <a class="dropdown-item" href="#">Volunteer</a>
-              <a class="dropdown-item" href="#">Share Your Story</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage5.html'">Volunteer</a>
+              <a class="dropdown-item" href="#"onclick="location='shareyourstory.html'">Share Your Story</a>
             </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-aided</a>
+              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-Aid</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="location='subpage1.html'">Find Support</a>
@@ -108,16 +108,12 @@
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="#" class="list-group-item active" onclick="location='https://www.mentalhealth.gov/'"><b>Mentalhealth</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.nami.org/'"><b>National Mental</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://medlineplus.gov/mentalhealth.html'"><b>Medlineplus</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.mentalhealthamerica.net/search/node'"><b>MentalAmerica</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.webmd.com/mental-health/default.htm'"><b>Webmd</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.mayoclinic.org/diseases-conditions/depression/symptoms-causes/syc-20356007'"><b>Depression</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://adaa.org/understanding-anxiety/depression'"><b>Anxiety</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.healthtalk.org/peoples-experiences/mental-health/mental-health-ethnic-minority-carers-experiences/overview'"><b>Mental-minority</b></a>
-            <a href="#" class="list-group-item" onclick="location='https://www.hhs.gov/'"><b>HHS</b></a>
-            <a href="#" class="list-group-item" onclick="location='http://www.mentalsupportcommunity.net/'"><b>mentalsupportcommunity</b></a>
+            <a href="#" class="list-group-item active" '"><b>Related links</b></a>
+            <a href="#" class="list-group-item" onclick="location='Risks Factors for Depression'"><b>Healthline</b></a>
+            <a href="#" class="list-group-item" onclick="location='https://www.webmd.com/depression/guide/depression-are-you-at-risk'"><b>webmd.com</b></a>
+            <a href="#" class="list-group-item" onclick="location='https://psychcentral.com/lib/what-are-the-risk-factors-for-depression/'"><b>Risk for Depression</b></a>
+            <a href="#" class="list-group-item" onclick="location='https://health.usnews.com/health-care/patient-advice/articles/2017-04-11/what-are-the-risk-factors-for-depression'"><b>Patient advice.com</b></a>
+            
           </div>
         </div><!--/span-->
       </div><!--/row-->
