--- a/subpage3_3_4.html
+++ b/subpage3_3_4.html
@@ -18,7 +18,7 @@
 
   <body>
 
-    <header>
+        <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#" onclick="location='index.html'">MentalEZ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Who We Are</a>
-              <a class="dropdown-item" href="#">What We Do</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_6.html'">Who We Are</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage3_7.html'">What We Do</a>
             </div>
             </li>
             <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
             </li>
             
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Frequent Problems</a>
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">High Frequency Problems</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#" onclick="location='subpage3_1.html'">Anxiety</a>
               <a class="dropdown-item" href="#" onclick="location='subpage3_2.html'">Bipohar</a>
@@ -56,12 +56,12 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do More</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Donate</a>
-              <a class="dropdown-item" href="#">Volunteer</a>
-              <a class="dropdown-item" href="#">Share Your Story</a>
+              <a class="dropdown-item" href="#"onclick="location='subpage5.html'">Volunteer</a>
+              <a class="dropdown-item" href="#"onclick="location='shareyourstory.html'">Share Your Story</a>
             </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-aided</a>
+              <a class="nav-link" href="#" onclick="location='subpage2.html'">Self-Aid</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="location='subpage1.html'">Find Support</a>
