final computer prototype

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="col-lg-4">
             <img class="rounded-circle" src="mental_health.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>What is mental illness</h2>
-            <p>A mental illness is a disease that causes mild to severe disturbances in thought and/or behavior, resulting in an inability to cope with life’s ordinary demands and routines.
+            <p>A mental illness is a disease that causes mild to severe disturbances in thought and/or behavior, resulting in an inability to cope with life’s ordinary demands and routines.<br>
             </p>
             <p><a class="btn btn-secondary" href="main.html" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
