final computer prototype

--- a/subpage1.html
+++ b/subpage1.html
@@ -92,7 +92,7 @@
           <div class="row">
             <div class="col-6 col-lg-6">
               <h2>Get Immediately Help</h2>
-              <p>We'll match you to a counselor that can help with People often don’t get the mental health services they need because they don’t know where to start. Talk to your primary care doctor or another health professional about mental health problems. Ask them to connect you with the right mental health services. If you do not have a health professional who is able to assist you, use these resources to find help for yourself, your friends, your family or your students </p>
+              <p>We'll match you to a counselor that can help with People often don’t get the mental health services they need because they don’t know where to start. Talk to your primary care doctor or another health professional about mental health problems. Ask them to connect you with the right mental health services.<br><br> </p>
               <p><a class="btn btn-secondary" href="#" role="button">Start here &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
@@ -102,20 +102,20 @@
               <br>
               <br>
               <br>
-              <br>
-              <br>
               <p><a class="btn btn-secondary" href="#" role="button">Start here &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
+              <br>
               <h2>More Than Medical Treatment</h2>
               <p>Learn how to recover your life. 
               Getting help for your mental health or substance use condition is about more than therapy and medication. You can get help with everything from housing to relationships, too. </p>
               <p><a class="btn btn-secondary" href="#" role="button">Start here &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
+              <br>
               <h2>Emergency Medical Services - 911</h2>
               <p>Call 911. 
-              If the situation is potentially life-threatening, get immediate emergency assistance by calling 911, available 24 hours a day. </p>
+              If the situation is potentially life-threatening, get immediate emergency assistance by calling 911, available 24 hours a day. <br><br></p>
               <p><a class="btn btn-secondary" href="#" role="button">Start here &raquo;</a></p>
             </div><!--/span-->
           </div><!--/row-->
