--- a/subpage2.html
+++ b/subpage2.html
@@ -91,7 +91,7 @@
           </div>
           <div class="row">
             <div class="col-6 col-lg-6">
-              <h2>Why Choose Self Aid?<br><br></h2>
+              <h2>Why Choose Self Aid?</h2>
               <p>Mental Health Self Aid helps people know that mental illnesses and addictions are real, common and treatable and that it's OK to seek help.  Research demonstrates this program's effectiveness in improving knowledge of mental illnesses and substance use, removing fear and misunderstanding and enabling those trained to offer concrete assistance.<br><br><br></p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!--/span-->
