final computer prototype

--- a/subpage2.html
+++ b/subpage2.html
@@ -97,17 +97,19 @@
             </div><!--/span-->
             <div class="col-6 col-lg-6">
               <h2>The First Method Of Self-Aid </h2>
-              <p>Follow The Natural Rule Let it be, as it is," is a psychological treatment that was put forward by Japanese psychologist masuda masuda, and is equally effective in people who are depressed. Think about it, if you worry about a thing is beyond your control, you can do, so any worry is wasteful and unnecessary, because it happened always occur, truthfully, will not because you worry and fret and change; If the thing you're worried about is within your control, why worry about it, just do it.
+              <p>Follow The Natural Rule Let it be, as it is," is a psychological treatment that was put forward by Japanese psychologist masuda masuda, and is equally effective in people who are depressed. Think about it, if you worry about a thing is beyond your control, you can do, so any worry is wasteful and unnecessary, because it happened always occur, truthfully, will not because you worry and fret and change.<br><br>
               </p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
+              <br>
               <h2>The Second Method Of Self-Aid</h2>
               <p> Venting is a good way to get rid of bad feelings. Many people have some bad feelings and desires to suppress, to suppress them into the unconscious, but they are still lurking in the consciousness, psychological and physical diseases, therefore must constantly reflect on and talk to cause pain. Someone has said that you are happy to share your happiness with others. If you share your troubles with others, you will have half the trouble. Pour out the object can be your teacher, students, parents, friends and so on, when you put the inner worries, depressed after pour out, all may feel comfortable many, many.
               </p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-lg-6">
+              <br>
               <h2>The Third Method Of Self-Aid</h2>
               <p>Transfer Method. When people are in psychological distress, the first and easiest thing to do is to pay attention to the transfer method. Avoid external stimuli that lead to mental distress. In psychological predicament, people's brains tend to form a strong excitement center, pay attention to transfer the relevant external stimulation, can excite the focal gave way to some other new excitement caused by center. The center of excitement has moved away from the psychological dilemma.<br><br><br><br>
               </p>
