--- a/subpage5.html
+++ b/subpage5.html
@@ -56,8 +56,8 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do More</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Donate</a>
-              <a class="dropdown-item" href="#">Volunteer</a>
-              <a class="dropdown-item" href="#">Share Your Story</a>
+              <a class="dropdown-item" href="#" onclick="location='subpage5.html'">Volunteer</a>
+              <a class="dropdown-item" href="#" onclick="location='shareyourstory.html'">Share Your Story</a>
             </div>
             </li>
             <li class="nav-item">
